# $Id$

2007-12-09	Konstantin V. Arkhipov

	* 0.10.8 released.

2007-12-05	Anton E. Lebedevich

	* main/Crypto/, main/Math/, main/OpenId/: OpenId implementation moved
	from incubator to main tree.

2007-11-27	Denis M. Gabaidulin

	* core/Form/Filters/CropFilter.class.php: crop string import filter
	were added.

2007-11-15	Ivan Y. Khvostishkov

	* core/Base/Assert.class.php: circular linked objects cause a fatal
	error in var_export(), so dumping via print_r() now.

2007-11-14	Ivan Y. Khvostishkov

	* main/Utils/ArrayUtils.class.php: countNonemptyValues(): try to guess
	what it does.

2007-11-12	Dmitry E. Pismenny

	* main/Markup/Feed/FeedReader.class.php: errors from simplexml_load_file()
	translated into WrongStateExceptions.

2007-11-07	Ivan Y. Khvostishkov

	* main/Utils/TextUtils.class.php: friendlyNumber(): bug with small
	orders fixed.

2007-11-02	Vladimir A. Altuchov

	* main/Utils/IO/FileReader.class.php: new reader added.

2007-11-02	Konstantin V. Arkhipov

	* main/DAOs/StorableDAO.class.php: inject() now checks affected rows
	count for sanity.

2007-11-01	Vladimir A. Altuchov

	* main/Markup/Feed/AtomItemWorker.class.php,
	main/Markup/Feed/RssItemWorker.class.php,
	main/Markup/Feed/FeedItem.class.php: id field added.

2007-10-31	Dmitry E. Pismenny

	* core/Form/Primitives/PrimitiveDate.class.php: PrimitiveDate::checkRanges()
	fixed.
	
2007-10-31	Dmitry A. Lomash

	* main/Net/IpRange.class.php: added setters, dropped final declaration.

2007-10-30	Konstantin V. Arkhipov

	* meta/classes/MetaConfiguration.class.php: class name collision
	detection added.

2007-10-26	Vladimir A. Altuchov

	* core/Cache/WatermarkedPeer.class.php: add setter for watermark label.

2007-10-25	Denis M. Gabaidulin

	* main/Flow/RedirectToView.class.php: constructor fixed.

2007-10-24	Konstantin V. Arkhipov

	* core/Form/Form.class.php: markGood() and markWrong() now supports
	rules marking.

	* main/Criteria/Criteria.class.php: field duplication eliminated for